--- a/Baha'i/Others/ROB/V1/p018-044Ch03.html
+++ b/Baha'i/Others/ROB/V1/p018-044Ch03.html
@@ -80,7 +80,10 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p21">21</a></center><p>
 	   <hr>
-	   1. Bahá'u'lláh, <i>The Proclamation of Bahá'u'lláh</i>, p. 57.
+	   1. Bahá'u'lláh, <i>The Proclamation of Bahá'u'lláh</i>, p. 57.<p>
+	   <hr>
+	   <hr>
+	   [CLUI: "O king! I was but a man...", <a href="../../../../CLUI/UnifiedIndex.html#Lawh-i-Sultán"><i>Lawh-i-Sultán</i></a>]
 	   </small></td>
 </tr>
 <tr>
@@ -250,6 +253,11 @@
 	   * The letter B in Arabic is <img src="i/B.jpg" border="0" alt="B" width="25" height="25"><p>
 	   <hr>
 	   7. Bahá'u'lláh, <i>Gleanings from the Writings of Bahá'u'lláh</i>, section <a href="../../../Baha/GL/p003-346.html#LXXXIX">lxxxix</a>.
+	   <hr>
+	   [CLUI:<br>
+	   <a href="../../../../CLUI/UnifiedIndex.html#Qur'ánSúrih1">opening chapter of the <i>Qur'án</i></a>,<br>
+	   <a href="../../../../CLUI/UnifiedIndex.html#Qur'án103">Súriy-i-V'al-'Asr</a><br>
+	   ]
 	   </small></td>
 </tr>
 <tr>
