--- a/Baha'i/Others/ROB/V1/p096-104Ch08.html
+++ b/Baha'i/Others/ROB/V1/p096-104Ch08.html
@@ -139,7 +139,11 @@
 	   In order to pay homage to his Lord and to express his inner feelings of humility and self-effacement towards Him, Dhabíh
 	   </td>
        <td></td>
-       <td VALIGN=top><small><center><a name="p102">102</a></center><p></small></td>
+       <td VALIGN=top><small><center><a name="p102">102</a></center><p>
+	   <hr>
+	   <hr>
+	   [CLUI: <a href="../../../../CLUI/UnifiedIndex.html#Qur'án103">Súriy-i-V'al-'Asr</a>]
+	   </small></td>
 </tr>
 <tr>
        <td width="70%">
