--- a/Baha'i/Others/ROB/V1/p153-197Ch10.html
+++ b/Baha'i/Others/ROB/V1/p153-197Ch10.html
@@ -169,7 +169,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p161">161</a></center><p>
 	   <hr>
-	   6. <i>Daniel</i>, xii. 9.
+	   6. <a href="../../../../CLUI/UnifiedIndex.html#BibleDaniel12:9"><i>Daniel</i>, xii. 9</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -212,7 +212,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p164">164</a></center><p>
-	   * <i>Qur'án</i> ii. 19. (The verse number is that of the Arabic text.)<p>
+	   * <a href="../../../../CLUI/UnifiedIndex.html#Qur'án2:19"><i>Qur'án</i> ii. 19</a>. (The verse number is that of the Arabic text.)<p>
 	   <hr>
 	   9. Bahá'u'lláh, <i>Kitáb-i-Íqán</i>, pp. 10-11 (Brit.}, <a href="../../../Baha/KI/p001-094.html#para16">p. 15</a> (U.S.).<p>
 	   10. <i>ibid.</i>, p. 105 (Brit.), <a href="../../../Baha/KI/p095-258.html#para74">p. 164</a> (U.S.).
@@ -231,7 +231,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p165">165</a></center><p>
-	   * Matt. xxiv. 29-31.<p>
+	   * Matt. xxiv. <a href="../../../../CLUI/UnifiedIndex.html#BibleMatthew24:29">29</a>, <a href="../../../../CLUI/UnifiedIndex.html#BibleMatthew24:30">30</a>, <a href="../../../../CLUI/UnifiedIndex.html#BibleMatthew24:31">31</a>.<p>
 	   † <i>ibid</i>., as quoted in <a href="../../../Baha/KI/p001-094.html#para22"><i>Kitáb-i-Íqán</i></a>.
 	   <hr>
 	   <hr>
@@ -298,7 +298,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p169">169</a></center><p>
-	   * Matt. ii. 2.<p>
+	   * <a href="../../../../CLUI/UnifiedIndex.html#BibleMatthew2:2">Matt. ii. 2</a>.<p>
 	   † Shaykh Ahmad-i-Ahsá'í was the founder of the Shaykhí school of Islám. He was followed by Siyyid Kázim-i-Rashtí. Both taught their followers that the coming of the Promised One of Islám was at hand and prepared them for His advent. Most of the early Bábís were from the Shaykhí sect.<p>
 	   <hr>
 	   14. Bahá'u'lláh, <i>Kitáb-i-Íqán</i>, pp. 40-1 (Brit.), <a href="../../../Baha/KI/p001-094.html#para69">p. 63</a> (U.S.).<p>
@@ -332,7 +332,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p171">171</a></center><p>
-	   * <i>Qur'án</i> xliv. 10. (The verse number is that of the Arabic text.)<p>
+	   * <a href="../../../../CLUI/UnifiedIndex.html#Qur'án44:10"><i>Qur'án</i> xliv. 10</a>. (The verse number is that of the Arabic text.)<p>
 	   <hr>
 	   19. Bahá'u'lláh, <i>Kitáb-i-Íqán</i>, p. 51 (Brit.), pp. <a href="../../../Baha/KI/p001-094.html#para88">79</a>-80 (U.S.).<p>
 	   20. <i>ibid.</i>, p. 52 (Brit.), pp. <a href="../../../Baha/KI/p001-094.html#para89">80</a>-1 (U.S.).
@@ -477,7 +477,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p178">178</a></center><p>
-	   * <i>Qur'án</i> ii. 285.<p>
+	   * <a href="../../../../CLUI/UnifiedIndex.html#Qur'án2:285"><i>Qur'án</i> ii. 285</a>.<p>
 	   <hr>
 	   30. Bahá'u'lláh, <i>Kitáb-i-Íqán</i>, pp. 97-9 (Brit.}, pp. <a href="../../../Baha/KI/p095-258.html#para60">152</a>-<a href="../../../Baha/KI/p095-258.html#para61">4</a> (U.S.).
 	   </small></td>
@@ -498,7 +498,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p179">179</a></center><p>
-	   * <i>Qur'án</i> ii, 253. (The verse number is that of the Arabic text.)<p>
+	   * <a href="../../../../CLUI/UnifiedIndex.html#Qur'án2:253"><i>Qur'án</i> ii, 253</a>. (The verse number is that of the Arabic text.)<p>
 	   <hr>
 	   31. Bahá'u'lláh, <i>Kitáb-i-Íqán</i>, p. 113 (Brit.), pp. <a href="../../../Baha/KI/p095-258.html#para89">176</a>-7 (U.S.).<p>
 	   32. <i>ibid.</i>, p. 102 (Brit.}, <a href="../../../Baha/KI/p095-258.html#para68">p. 159</a> (U.S.).
@@ -560,8 +560,8 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p183">183</a></center><p>
 	   * Associated with the appearance of the Manifestation of God.<p>
-	   † Isaiah lxv. 25.<p>
-	   ‡ <i>Qur'án</i> vii. 178.<p>
+	   † <a href="../../../../CLUI/UnifiedIndex.html#BibleIsaiah65:25">Isaiah lxv. 25</a>.<p>
+	   ‡ <a href="../../../../CLUI/UnifiedIndex.html#Qur'án7:178"><i>Qur'án</i> vii. 178</a>.<p>
 	   § See pp. <a href="p153-197Ch10.html#p166">166</a>-71<p>
 	   <hr>
 	   37. Bahá'u'lláh, <i>Kitáb-i-Íqán</i>, p. 73 (Brit.), pp. <a href="../../../Baha/KI/p095-258.html#para17">112</a>-<a href="../../../Baha/KI/p095-258.html#para18">13</a> (U.S.).
@@ -578,10 +578,10 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p184">184</a></center><p>
-	   * John iii. 7.<p>
-	   † <i>ibid</i>., vv. 5-6.<p>
+	   * <a href="../../../../CLUI/UnifiedIndex.html#BibleJohn3:7">John iii. 7</a>.<p>
+	   † <i>ibid</i>., vv. <a href="../../../../CLUI/UnifiedIndex.html#BibleJohn3:5">5</a>-<a href="../../../../CLUI/UnifiedIndex.html#BibleJohn3:6">6</a>.<p>
 	   ‡ <i>Qur'án</i> vii. 178.<p>
-	   § Luke ix. 60, as cited in the <i>Kitáb-i-Íqán</i>.<p>
+	   § <a href="../../../../CLUI/UnifiedIndex.html#BibleLuke9:60">Luke ix. 60</a>, as cited in the <i>Kitáb-i-Íqán</i>.<p>
 	   <hr>
 	   38. Bahá'u'lláh, <i>Kitáb-i-Íqán</i>, p. 74 (Brit.), <a href="../../../Baha/KI/p095-258.html#para19">p. 114</a> (U.S.).<p>
 	   39. <i>ibid.</i>, pp. 76-7 (Brit.), pp. <a href="../../../Baha/KI/p095-258.html#para24">118</a>-<a href="../../../Baha/KI/p095-258.html#para25">19</a> (U.S.).
@@ -599,7 +599,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p185">185</a></center><p>
-	   * <i>Qur'án</i> ii. 210. (Verse number is in accordance with the Arabic text.)<p>
+	   * <a href="../../../../CLUI/UnifiedIndex.html#Qur'án2:210"><i>Qur'án</i> ii. 210</a>. (Verse number is in accordance with the Arabic text.)<p>
 	   <hr>
 	   40. Bahá'u'lláh, <i>Kitáb-i-Íqán</i>, p. 92 (Brit.), pp. <a href="../../../Baha/KI/p095-258.html#para50">143</a>-<a href="../../../Baha/KI/p095-258.html#para51">4</a> (U.S.).
 	   </small></td>
@@ -642,7 +642,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p188">188</a></center><p>
-	   * <i>Qur'án</i> xxix: 69.<p>
+	   * <a href="../../../../CLUI/UnifiedIndex.html#Qur'án29:69"><i>Qur'án</i> xxix:69</a>.<p>
 	   † <i>ibid</i>.
 	   </small></td>
 </tr>
@@ -656,7 +656,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p189">189</a></center><p>
-	   * <i>Qur'án</i> ii. 1.<p>
+	   * <a href="../../../../CLUI/UnifiedIndex.html#Qur'án2:1"><i>Qur'án</i> ii. 1</a>.<p>
 	   <hr>
 	   43. Bahá'u'lláh, <i>Kitáb-i-Íqán</i>, pp. 123-6 (Brit.), pp. <a href="../../../Baha/KI/p095-258.html#para111">192</a>-6 (U.S.).
 	   </small></td>
@@ -671,7 +671,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p190">190</a></center><p>
-	   * <i>Qur'án</i> ii. 23. (Verse number is according to the Arabic text.)<p>
+	   * <a href="../../../../CLUI/UnifiedIndex.html#Qur'án2:23"><i>Qur'án</i> ii. 23</a>. (Verse number is according to the Arabic text.)<p>
 	   † See footnote, p. <a href="p018-044Ch03.html#p23">23</a>.
 	   <hr>
 	   44. Bahá'u'lláh, <i>Kitáb-i-Íqán</i>. These quotations are taken from pp. 129, 130, 131 (Brit.) and from pp. <a href="../../../Baha/KI/p095-258.html#para122">202</a>, <a href="../../../Baha/KI/p095-258.html#para122">203</a> and <a href="../../../Baha/KI/p095-258.html#para124">204</a>-5 (U.S.).<p>
