--- a/Baha'i/Others/ROB/V1/p325-331Apndx_III.html
+++ b/Baha'i/Others/ROB/V1/p325-331Apndx_III.html
@@ -90,7 +90,7 @@ page 329 - † According to the "Kashfu'l-Ghitá" (p. 81...
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p328">328</a></center><p>
-	   * <i>Qur'án</i>, cviii.
+	   * <a href="../../../../CLUI/UnifiedIndex.html#Qur'án108"><i>Qur'án</i>, cviii</a>.
 	   </small></td>
 </tr>
 <tr>
