--- a/Baha'i/Others/ROB/V1/p332-336Apndx_IV.html
+++ b/Baha'i/Others/ROB/V1/p332-336Apndx_IV.html
@@ -95,8 +95,8 @@
        <td VALIGN=top><small><center><a name="p335">335</a></center><p>
 	   * <i>Qur'án</i>.<p>
 	   † The infernal tree.<p>
-	   ‡ Literally, 'sinner'. (<i>Qur'án</i> XLIV. 43-4.) Hájí Mírzá Karím Khán for reasons of false modesty has referred to himself as 'Athím in his writings.<p>
-	   § <i>Qur'án</i> XLIV. 49. 'Karím', which can be translated as 'noble', 'honourable' or 'bountiful', has been understood by commentators on the <i>Qur'án</i> to represent an attribute, but Bahá'u'lláh states that, in this verse, it was intended as the name of a man, Karím.<p>
+	   ‡ Literally, 'sinner'. (<i>Qur'án</i> <a href="../../../../CLUI/UnifiedIndex.html#Qur'án44:43-44">XLIV. 43-4</a>.) Hájí Mírzá Karím Khán for reasons of false modesty has referred to himself as 'Athím in his writings.<p>
+	   § <i>Qur'án</i> <a href="../../../../CLUI/UnifiedIndex.html#Qur'án44:49">XLIV. 49</a>. 'Karím', which can be translated as 'noble', 'honourable' or 'bountiful', has been understood by commentators on the <i>Qur'án</i> to represent an attribute, but Bahá'u'lláh states that, in this verse, it was intended as the name of a man, Karím.<p>
 	   <hr>
 	   3. Bahá'u'lláh, <i>Kitáb-i-Íqán</i>, pp. 121-2 (Brit.), <a href="../../../Baha/KI/p095-258.html#para107">p. 190</a> (U.S.).
 	   </small></td>
