--- a/Baha'i/Others/ROB/V1/p053-070Ch05.html
+++ b/Baha'i/Others/ROB/V1/p053-070Ch05.html
@@ -86,7 +86,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p56">56</a></center><p>
 	   <hr>
-	   2. <i>Qur'án</i>, iii, 93 (according to the Arabic text numbering).
+	   2. <a href="../../../../CLUI/UnifiedIndex.html#Qur'án3:93"><i>Qur'án</i>, iii, 93</a> (according to the Arabic text numbering).
 	   </small></td>
 </tr>
 <tr>
