--- a/Baha'i/Others/ROB/V1/p105-152Ch09.html
+++ b/Baha'i/Others/ROB/V1/p105-152Ch09.html
@@ -759,7 +759,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p148">148</a></center><p>
 	   <hr>
-	   22. <i>Qur'án</i>, vi. 35 (according to the Arabic text numbering).<p>
+	   22. <a href="../../../../CLUI/UnifiedIndex.html#Qur'án6:35"><i>Qur'án</i>, vi. 35</a> (according to the Arabic text numbering).<p>
 	   23. Bahá'u'lláh, <i>Gleanings from the Writings of Bahá'u'lláh</i>, section <a href="../../../Baha/GL/p003-346.html#XLV">xlv</a>.
 	   </small></td>
 </tr>
