--- a/Baha'i/Others/ROB/V1/p257-282Ch16.html
+++ b/Baha'i/Others/ROB/V1/p257-282Ch16.html
@@ -135,6 +135,9 @@
        <td VALIGN=top><small><center><a name="p263">263</a></center><p>
 	   <hr>
 	   4. Bahá'u'lláh, <i>Kitáb-i-Íqán</i>, p. 43 (Brit.}, <a href="../../../Baha/KI/p001-094.html#para75">p. 67</a> (U.S.).
+	   <hr>
+	   <hr>
+	   [CLUI: <a href="../../../../CLUI/UnifiedIndex.html#Qur'án55:29"><i>Qur'án</i> 55:29</a>]
 	   </small></td>
 </tr>
 <tr>
