--- a/Baha'i/Others/ROB/V2/p001-028Ch01.html
+++ b/Baha'i/Others/ROB/V2/p001-028Ch01.html
@@ -57,7 +57,7 @@
        <td VALIGN=top><small><center><a name="p2">2</a></center><p>
 	   <hr>
 	   1. <i>Micah</i>, vii. 12.<p>
-	   2. <i>Amos</i>, iv. 13.<p>
+	   2. <a href="../../../../CLUI/UnifiedIndex.html#BibleAmos4:13"><i>Amos</i>, iv. 13</a>.<p>
 	   3. Bahá'u'lláh, <i>Má'idiy-i-Ásamání</i>, vol. VII, p. 192.
 	   </small></td>
 </tr>
@@ -269,10 +269,10 @@
        <td VALIGN=top><small><center><a name="p16">16</a></center><p>
 	   * This term is a symbol for the knowledge of God Who 'knoweth all things and is known of none'.<p>
 	   <hr>
-	   16. <i>Qur'án</i>, xxix. 23; quoted by Bahá'u'lláh in the <i>Kitáb-i-Íqán</i>, p. 88 (Brit.), pp. <a href="../../../Baha/KI/p095-258.html#para47">138</a>-9 (U.S.).<p>
+	   16. <a href="../../../../CLUI/UnifiedIndex.html#Qur'án29:23"><i>Qur'án</i>, xxix. 23</a>; quoted by Bahá'u'lláh in the <i>Kitáb-i-Íqán</i>, p. 88 (Brit.), pp. <a href="../../../Baha/KI/p095-258.html#para47">138</a>-9 (U.S.).<p>
 	   17. <i>ibid</i>., xviii. III.<p>
-	   18. <i>ibid</i>., ii. 46.<p>
-	   19. <i>ibid</i>., xiii. 2.<p>
+	   18. <i>ibid</i>., <a href="../../../../CLUI/UnifiedIndex.html#Qur'án2:46">ii. 46</a>.<p>
+	   19. <i>ibid</i>., <a href="../../../../CLUI/UnifiedIndex.html#Qur'án13:2">xiii. 2</a>.<p>
 	   </small></td>
 </tr>
 
@@ -288,8 +288,8 @@
 	   * See <i>The Revelation of Bahá'u'lláh</i>, vol. 1, pp. <a href="../V1/p153-197Ch10.html#p175">175</a>-6, p. <a href="../V1/p153-197Ch10.html#p185">185</a>.<p>
 	   <hr>
 	   20. <i>Revelation</i>, xxii. 3 and 4<p>
-	   21. <i>ibid</i>., xxi. 3 and 4.<p>
-	   22. <i>Isaiah</i>, xxxv. 2.<p>
+	   21. <i>ibid</i>., xxi. <a href="../../../../CLUI/UnifiedIndex.html#BibleRevelation21:3">3</a> and 4.<p>
+	   22. <a href="../../../../CLUI/UnifiedIndex.html#BibleIsaiah35:2"><i>Isaiah</i>, xxxv. 2</a>.<p>
 	   23. <i>ibid</i>., xxxv. 4.<p>
 	   24. <i>ibid</i>., xl. 5.<p>
 	   25. <i>ibid</i>., lx. 2.<p>
@@ -339,7 +339,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p20">20</a></center><p>
 	   <hr>
-	   28. <i>Qur'án</i>, xxviii. 5.<p>
+	   28. <a href="../../../../CLUI/UnifiedIndex.html#Qur'án28:5"><i>Qur'án</i>, xxviii. 5</a>.<p>
 	   29. <i>Matthew</i>, v. 5.
 	   </small></td>
 </tr>
@@ -355,7 +355,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p21">21</a></center><p>
 	   <hr>
-	   30. <i>Qur'án</i>, xi. 27.
+	   30. <a href="../../../../CLUI/UnifiedIndex.html#Qur'án11:27"><i>Qur'án</i>, xi. 27</a>.
 	   </small></td>
 </tr>
 
