--- a/Baha'i/Others/ROB/V2/p137-151Ch06.html
+++ b/Baha'i/Others/ROB/V2/p137-151Ch06.html
@@ -137,7 +137,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p143">143</a></center><p>
-	   * <i>Qur'án</i>, lxxvi. 9.<p>
+	   * <a href="../../../../CLUI/UnifiedIndex.html#Qur'án76:9"><i>Qur'án</i>, lxxvi. 9</a>.<p>
 	   <hr>
 	   6. Nabíl-i-A'zam, 'Panj Kanz'.
 	   </small></td>
