--- a/Baha'i/Others/ROB/V2/p236-269Ch11.html
+++ b/Baha'i/Others/ROB/V2/p236-269Ch11.html
@@ -288,7 +288,7 @@ p261 footnote: should list of tablets revealed for Khalíl also include Gleaning
        <td></td>
        <td VALIGN=top><small><center><a name="p250">250</a></center><p>
 	   <hr>
-	   12. <i>Qur'án</i>, xli. 53.
+	   12. <a href="../../../../CLUI/UnifiedIndex.html#Qur'án41:53"><i>Qur'án</i>, xli. 53</a>.
 	   </small></td>
 </tr>
 <tr>
