--- a/Baha'i/Others/ROB/V2/p270-282Ch12.html
+++ b/Baha'i/Others/ROB/V2/p270-282Ch12.html
@@ -44,7 +44,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p270">270</a></center><p>
 	   * See <a href="p422-426Apndx_I.html">Appendix I</a>.<p>
-	   † See <i>Matthew</i> 24:29.<p>
+	   † See <a href="../../../../CLUI/UnifiedIndex.html#BibleMatthew24:29"><i>Matthew</i> 24:29</a>.<p>
 	   <hr>
 	   1. Bahá'u'lláh, <i>Epistle to the Son of the Wolf</i>, pp. <a href="../../../Baha/EW/p001-182.html#para194">131</a>-2.
 	   </small></td>
