--- a/Baha'i/Others/ROB/V2/p337-369Ch16.html
+++ b/Baha'i/Others/ROB/V2/p337-369Ch16.html
@@ -51,7 +51,7 @@
 	   <hr>
 	   1. The Báb, quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p001-086FirstPeriod.html#para34">p. 21</a>.
 	   <hr>
-	   [Lawh-i-Sultán] <i>God Passes By</i>, <a href="../../../SE/GPB/p001-086FirstPeriod.html#para43">p. 26</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para115">p. 143</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para116">p. 144</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para172">p. 172</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para208">p. 185</a>
+	   [CLUI: <a href="../../../../CLUI/UnifiedIndex.html#Lawh-i-Sultán"><i>Lawh-i-Sultán</i></a>]
 	   </small></td>
 </tr>
 <tr>
@@ -299,7 +299,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p354">354</a></center><p>
-	   * See <i>Qur'án</i> ii. 219, iv. 43 and v. 93-4. <p>
+	   * See <i>Qur'án</i> <a href="../../../../CLUI/UnifiedIndex.html#Qur'án2:19">ii. 219</a>, iv. 43 and v. 93-4. <p>
 	   † See <i>The Dawn-Breakers</i> [<a href="../../DBNN/p324-377Ch19.html">Mázindarán</a>, <a href="../../DBNN/p527-581Ch24.html">Zanjá</a>n, <a href="../../DBNN/p465-499Ch22.html">Nayríz</a>].<p>
 	   <hr>
 	   [timing of revelation] <i>The Kitáb-i-Aqdas</i>, Introduction, <a href="../../../Baha/KA/p001-011Intro.html#p8">p. 8</a>
