--- a/Baha'i/Others/ROB/V2/p397-421Ch19.html
+++ b/Baha'i/Others/ROB/V2/p397-421Ch19.html
@@ -363,7 +363,7 @@
 	   <hr>
 	   17. Bahá'u'lláh, quoted by Shoghi Effendi, <i>The Promised Day Is Come</i>, p. 75.<p>
 	   18. Bahá'u'lláh, quoted by Shoghi Effendi, 'The Dispensation of Bahá'u'lláh', <i>The World Order of Bahá'u'lláh</i>, pp. 105-6.<p>
-	   19. <i>Qur'án</i>, lv. 29. Quoted by Bahá'u'lláh, <i>Kitáb-i-Íqán</i>, p. 43 (Brit.), <a href="../../../Baha/KI/p001-094.html#para75">p. 67</a> (U.S.).
+	   19. <a href="../../../../CLUI/UnifiedIndex.html#Qur'án55:29"><i>Qur'án</i>, lv. 29</a>. Quoted by Bahá'u'lláh, <i>Kitáb-i-Íqán</i>, p. 43 (Brit.), <a href="../../../Baha/KI/p001-094.html#para75">p. 67</a> (U.S.).
 	   </small></td>
 </tr>
 <tr>
@@ -390,7 +390,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p418">418</a></center><p>
-	   * <i>The Promised Day it Come</i>.<p>
+	   * <i>The Promised Day is Come</i>.<p>
 	   <hr>
 	   20. Bahá'u'lláh, <i>Gleanings from the Writings of Bahá'u'lláh</i>, section <a href="../../../Baha/GL/p003-346.html#para74">xvi</a>.
 	   </small></td>
