--- a/Baha'i/Others/ROB/V2/p107-136Ch05.html
+++ b/Baha'i/Others/ROB/V2/p107-136Ch05.html
@@ -284,7 +284,7 @@
        <td VALIGN=top><small><center><a name="p123">123</a></center><p>
 	   * Muhammad.<p>
 	   <hr>
-	   12. <i>Qur'án</i>, ii. 23; quoted in the <i>Kitáb-i-Íqán</i>, p. 131 (Brit.), <a href="../../../Baha/KI/p095-258.html#para124">p. 204</a> (U.S.).<p>
+	   12. <a href="../../../../CLUI/UnifiedIndex.html#Qur'án2:23"><i>Qur'án</i>, ii. 23</a>; quoted in the <i>Kitáb-i-Íqán</i>, p. 131 (Brit.), <a href="../../../Baha/KI/p095-258.html#para124">p. 204</a> (U.S.).<p>
 	   13. Bahá'u'lláh, <a href="../../../Comp/BP/p207-268Occasional.html#para10">'Tablet of Ahmad'</a>, included in most Bahá'í prayer books.
 	   </small></td>
 </tr>
@@ -312,7 +312,7 @@
        <td VALIGN=top><small><center><a name="p125">125</a></center><p>
 	   * The word 'nation' is a translation of the Arabic word 'ummat' which also means religious community.<p>
 	   <hr>
-	   14. <i>Qur'án</i>, vii. 34.
+	   14. <a href="../../../../CLUI/UnifiedIndex.html#Qur'án7:34"><i>Qur'án</i>, vii. 34</a>.
 	   </small></td>
 </tr>
 <tr>
