--- a/Baha'i/Others/ROB/V2/p194-221Ch09.html
+++ b/Baha'i/Others/ROB/V2/p194-221Ch09.html
@@ -54,7 +54,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p195">195</a></center><p>
 	   <hr>
-	   1. <i>Qur'án</i>, cxii.
+	   1. <a href="../../../../CLUI/UnifiedIndex.html#Qur'án112"><i>Qur'án</i>, cxii</a>.
 	   </small></td>
 </tr>
 <tr>
