--- a/Baha'i/Others/ROB/V3/p073-086Ch04.html
+++ b/Baha'i/Others/ROB/V3/p073-086Ch04.html
@@ -148,6 +148,8 @@
 	   <hr>
 	   2. <i>The Proclamation of Bahá'u'lláh</i>, p. 22.<p> 
 	   3. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#p217">p. 219</a>.
+	   <hr>
+	   [CLUI: <a href="../../../../CLUI/UnifiedIndex.html#Qur'án104:1-2"><i>Qur'án</i> 104:1-2</a>]
 	   </small></td>
 </tr>
 <tr>
