--- a/Baha'i/Others/ROB/V3/p147-173Ch08.html
+++ b/Baha'i/Others/ROB/V3/p147-173Ch08.html
@@ -458,7 +458,7 @@
 	   * literally: point of adoration. A point to which the faithful turn at the time of prayer.<p>
 	   † head-dress similar to the one that Bahá'u'lláh used to wear.<p>
 	   <hr>
-	   23. <i>Qur'án</i>, xxiii. 14.
+	   23. <a href="../../../../CLUI/UnifiedIndex.html#Qur'án23:14"><i>Qur'án</i>, xxiii. 14</a>.
 	   </small></td>
 </tr>
 <tr>
