--- a/Baha'i/Others/ROB/V3/p221-252Ch11.html
+++ b/Baha'i/Others/ROB/V3/p221-252Ch11.html
@@ -386,9 +386,10 @@
 	   In contrast to the writings of Shoghi Effendi, one who had truly understood the station of Bahá'u'lláh and was in a position to explain His actions, we come across the writings of those who had very little knowledge of the Faith and have left behind much erroneous information. How can a man who is
 	   </td>
        <td></td>
-       <td VALIGN=top><small><center><a name="p241">241</a></center><p></small>
+       <td VALIGN=top><small><center><a name="p241">241</a></center><p>
 	   <hr>
 	   <a href="../../../SE/GPB/Cover.html"><i>God Passes By</i></a>
+	   </small>
 	   </td>
 </tr>
 <tr>
@@ -447,7 +448,7 @@
        <td VALIGN=top><small><center><a name="p245">245</a></center><p>
 	   <hr>
 	   12. Quoted by Fádil-i-Mázindarání, <i>Asráru'l-Áthár</i>, vol. 2, pp. 164-5.<p>
-	   13. <i>Qur'án</i>, vi. 59.
+	   13. <a href="../../../../CLUI/UnifiedIndex.html#Qur'án6:59"><i>Qur'án</i>, vi. 59</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -471,7 +472,7 @@
 	   § Bahá'u'lláh received the modest education customary for the people of His class. He did not attend the schools of higher learning which were set aside for theologians and divines. See vol. 1, pp. <a href="../V1/p018-044Ch03.html">18</a>-20.<p>
 	   <hr>
 	   14. <i>ibid</i>. xix. 18.<p>
-	   15. <i>ibid</i>. iii. 183.
+	   15. <i>ibid</i>. <a href="../../../../CLUI/UnifiedIndex.html#Qur'án3:183">iii. 183</a>.
 	   </small></td>
 </tr>
 <tr>
