--- a/Baha'i/Others/ROB/V3/p371-399Ch17.html
+++ b/Baha'i/Others/ROB/V3/p371-399Ch17.html
@@ -375,7 +375,7 @@
        <td VALIGN=top><small><center><a name="p390">390</a></center><p>
        * For an explanation of these words of the <i>Qur'án</i> see vol. 1, pp. <a href="../V1/p257-282Ch16.html#p262">262</a>-3; vol. 2, p. <a href="../V2/p397-421Ch19.html#p416">416</a>.<p>
 	   <hr>
-	   26. <i>Qur'án</i>, iv. 29. This spoken chronicle is published in <i>Gulzár-i-Na'ím</i>, p. 19.
+	   26. <a href="../../../../CLUI/UnifiedIndex.html#Qur'án55:29"><i>Qur'án</i>, lv. 29</a>. This spoken chronicle is published in <i>Gulzár-i-Na'ím</i>, p. 19.
 	   </small></td>
 </tr>
 <tr>
