--- a/Baha'i/Others/ROB/V3/p174-203Ch09.html
+++ b/Baha'i/Others/ROB/V3/p174-203Ch09.html
@@ -231,7 +231,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p186">186</a></center><p>
-	   * <i>Qur'án</i> xxvii, 22. This verse differs slightly from what Badí' uttered in the presence of the Sháh. The verse refers to words which were addressed to Solomon by his messenger, Hoopoe, a mystical bird, when it brought for him tidings from Sheba.
+	   * <a href="../../../../CLUI/UnifiedIndex.html#Qur'án27:22"><i>Qur'án</i> xxvii, 22</a>. This verse differs slightly from what Badí' uttered in the presence of the Sháh. The verse refers to words which were addressed to Solomon by his messenger, Hoopoe, a mystical bird, when it brought for him tidings from Sheba.
 	   </small></td>
 </tr>
 <tr>
