--- a/Baha'i/Others/ROB/V4/p145-160Ch09.html
+++ b/Baha'i/Others/ROB/V4/p145-160Ch09.html
@@ -179,7 +179,7 @@
 	   * see vol. 2, pp. <a href="../V2/p270-282Ch12.html">270</a>-72, and <a href="../V2/p422-426Apndx_I.html">Appendix I</a>.<p>
 	   <hr>
 	   8. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para332">pp. 117</a>-18.<p>
-	   9. Daniel 12:8-9.
+	   9. Daniel 12:8-<a href="../../../../CLUI/UnifiedIndex.html#BibleDaniel12:9">9</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -193,7 +193,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p155">155</a></center><p>
 	   <hr>
-	   10. <i>Qur'án</i> 7:34.
+	   10. <a href="../../../../CLUI/UnifiedIndex.html#Qur'án7:34"><i>Qur'án</i> 7:34</a>.
 	   </small></td>
 </tr>
 <tr>
