--- a/Baha'i/Others/ROB/V4/p351-367Ch23.html
+++ b/Baha'i/Others/ROB/V4/p351-367Ch23.html
@@ -101,7 +101,7 @@
        <td VALIGN=top><small><center><a name="p355">355</a></center><p>
 	   <hr>
 	   5. <i>Gleanings</i>, <a href="../../../Baha/GL/p003-346.html#para30">XI</a>.<p>
-	   6. Isaiah 35:1-2.
+	   6. Isaiah 35:1-<a href="../../../../CLUI/UnifiedIndex.html#BibleIsaiah35:2">2</a>.
 	   <hr>
 	   ["Seized with transports of joy..."] <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para4">p. 3</a>
 	   </small></td>
