--- a/Baha'i/Others/ROB/V4/p368-390Ch24.html
+++ b/Baha'i/Others/ROB/V4/p368-390Ch24.html
@@ -150,6 +150,8 @@
 	   † For details of the <i>Lawh-i-Sultán</i> see vol. 2, pp. <a href="../V2/p337-369Ch16.html">337</a>-57, and vol. 3, <a href="../V3/p174-203Ch09.html">ch. 9</a>.<p>
 	   <hr>
 	   3. <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para13">p. 11</a>.
+	   <hr>
+	   [CLUI: <a href="../../../../CLUI/UnifiedIndex.html#Lawh-i-Sultán"><i>Lawh-i-Sultán</i></a>]
 	   </small></td>
 </tr>
 <tr>
@@ -411,6 +413,8 @@
 	   † For the <i>Lawh-i-Sultán</i> see vol. 2, <a href="../V2/p337-369Ch16.html">ch. 16</a>, and vol. 3, <a href="../V3/p174-203Ch09.html">ch. 9</a>. For the Tablet to Napoleon III see vol. 2, pp. <a href="../V2/p337-369Ch16.html#p368">368</a>-9, and vol. 3, pp. <a href="../V3/p108-132Ch06.html#p110">110</a>-15. For the Tablet to Czar Alexander II see vol. 3, pp. <a href="../V3/p108-132Ch06.html#p118">118</a>-23. For the Tablet to Queen Victoria see vol. 3, pp. <a href="../V3/p108-132Ch06.html#p123">123</a>-8.<p>
 	   <hr>
 	   36. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para590">p. 219</a>.
+	   <hr>
+   	   [CLUI: <a href="../../../../CLUI/UnifiedIndex.html#Lawh-i-Sultán"><i>Lawh-i-Sultán</i></a>]
 	   </small></td>
 </tr>
 <tr>
