--- a/Baha'i/Others/ROB/V4/p391-412Ch25.html
+++ b/Baha'i/Others/ROB/V4/p391-412Ch25.html
@@ -296,7 +296,7 @@
    	   * see <i>Epistle to the Son of the Wolf</i>, pp. <a href="../../../Baha/EW/p001-182.html#para70">41</a>-4.<p>
 	   <hr>
 	   16. <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para70">p. 41</a>.<p>
-	   17. <i>Qur'án</i>, 112.<p>
+	   17. <a href="../../../../CLUI/UnifiedIndex.html#Qur'án112"><i>Qur'án</i>, 112</a>.<p>
 	   18. <i>Epistle to the Son of the Wolf</i>, pp. <a href="../../../Baha/EW/p001-182.html#para72">41</a>-2.<p>
 	   19. <i>ibid</i>. <a href="../../../Baha/EW/p001-182.html#para75">p. 43</a>.
 	   </small></td>
