--- a/Baha'i/Others/ROB/V4/p425-428Apndx_I.html
+++ b/Baha'i/Others/ROB/V4/p425-428Apndx_I.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p413-424Ch26.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p429-431Apndx_II.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -67,7 +67,7 @@
 	   The versions we have given in these pages are based on the verses of the <i>Qur'án</i>.* However, there are further details derived from various traditions other than the <i>Qur'án</i>, but these seem to be unreal and pure fantasy.<p>
 	   The stories of Húd and Sálih are somewhat similar to the story of Noah, the flood and the Ark. They are all symbolic. In the Bahá'í Writings we find explained the significance of such terms as Noah's Ark, the flood, the she-camel and other incidents. For example, 'Abdu'l-Bahá in a Tablet<small><sup>3</sup></small> explains that the she-camel was symbolic of the holy spirit of Sálih, and the milk was symbolic of the spiritual food which his spirit offered to the people. The significance of the she-camel being hamstrung is the suffering inflicted by the wicked people on that holy soul, Sálih. The spring of water which the people denied to the she-camel signifies life on this earth. The people were so attached to earthly things that they could not recognize the gifts of God to them, and so they rose up in opposition to Sálih, and when he departed from their midst they became deprived of his spiritual influence. His absence was the calamity which caused them to be deprived of the bounties of God and consequently they perished spiritually.<p>
 	   There is a chapter in the <i>Qur'án</i> known as the Súrah of Húd. It tells the story of all the Prophets including Húd and Sálih. It describes how they were all denied, opposed and persecuted by their own people. Bahá'u'lláh refers to this in the <i>Kitáb-i-Íqán</i>:<p>
-	   <blockquote>To them that are possessed of true understanding and insight the Súrah of Húd surely sufficeth. Ponder a while those holy words in your heart, and with utter detachment, strive to grasp their meaning. Examine the wondrous behaviour of the Prophets, and recall the defamations and denials uttered by the children of negation and falsehood, perchance you may cause the bird of the human heart to wing its flight away from the abodes of heedlessness and doubt unto the nest of faith and</blockquote>
+	   <blockquote>To them that are possessed of true understanding and insight the Súrah of Húd surely sufficeth. Ponder a while those holy words in your heart, and with utter detachment, strive to grasp their meaning. Examine the wondrous behaviour of the Prophets, and recall the defamations and denials uttered by the children of negation and falsehood, perchance you may cause the bird of the human heart to wing its flight away from the abodes of heedlessness and doubt unto the nest of faith and</blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p427">427</a></center><p>
@@ -89,7 +89,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p428">428</a></center><p>
    	   * <i>Qur'án</i> 35:9.<p>
-	   † <i>Qur'án</i> 11:61 and 11:62.<p>
+	   † <a href="../../../../CLUI/UnifiedIndex.html#Qur'án11:61-62"><i>Qur'án</i> 11:61 and 11:62</a>.<p>
 	   <hr>
 	   4. <i>Kitáb-i-Íqán</i>, pp. <a href="../../../Baha/KI/p001-094.html#para6">5</a>-6.<p>
 	   5. <i>ibid</i>. pp. <a href="../../../Baha/KI/p001-094.html#para10">9</a>-10.
@@ -103,7 +103,7 @@
        <td>
 	   	   <FORM ACTION="p413-424Ch26.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -111,12 +111,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p429-431Apndx_II.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
