--- a/Baha'i/Others/ROB/V4/p432-440Apndx_III.html
+++ b/Baha'i/Others/ROB/V4/p432-440Apndx_III.html
@@ -109,7 +109,7 @@
 </tr>
 <tr>
        <td VALIGN=top><a name="18"/><a href="../../../Baha/EW/p001-182.html#p18">18</a></td>
-       <td><a name="ChoiceWine"/><i>'The seal of the Choice Wine hath...been broken.'</i> The reference to choice wine, sealed, may be found in the Qur'án (see 83:22-6). The significance of 'sealed' is that the true meanings of the Words of God in former Dispensations were not disclosed until the advent of Bahá'u'lláh (see vol. 1, pp. <a href="../V1/p153-197Ch10.html#p160">160</a>-61, on this prophecy of Daniel). The unsealing of the Choice Wine signifies the revelation of the Word of God in this age, disclosing to mankind new teachings and new laws. Bahá'u'lláh declares in the <i>Kitáb-i-Aqdas</i>, 'Think not that We have revealed unto you a mere code of laws. Nay rather We have unsealed the Choice Wine with the fingers of might and power.' [<i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para5">&para;5</a>]</td>
+       <td><a name="ChoiceWine"/><i>'The seal of the Choice Wine hath...been broken.'</i> The reference to choice wine, sealed, may be found in the Qur'án (see <a href="../../../../CLUI/UnifiedIndex.html#Qur'án83:22-6">83:22-6</a>). The significance of 'sealed' is that the true meanings of the Words of God in former Dispensations were not disclosed until the advent of Bahá'u'lláh (see vol. 1, pp. <a href="../V1/p153-197Ch10.html#p160">160</a>-61, on this prophecy of Daniel). The unsealing of the Choice Wine signifies the revelation of the Word of God in this age, disclosing to mankind new teachings and new laws. Bahá'u'lláh declares in the <i>Kitáb-i-Aqdas</i>, 'Think not that We have revealed unto you a mere code of laws. Nay rather We have unsealed the Choice Wine with the fingers of might and power.' [<i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para5">&para;5</a>]</td>
        <td></td>
 </tr>
 <tr>
@@ -469,7 +469,7 @@
 </tr>
 <tr>
        <td VALIGN=top><a name="150"/><a href="../../../Baha/EW/p001-182.html#p150">150</a></td>
-       <td><i>'Neither is there a thing green or sere, but it is noted in a distinct writing.' Qur'án</i> 6:59. See vol. 3, pp. <a href="../V3/p221-252Ch11.html#p245">245</a>-6.</td>
+       <td><i>'Neither is there a thing green or sere, but it is noted in a distinct writing.'</i> <a href="../../../../CLUI/UnifiedIndex.html#Qur'án6:59"><i>Qur'án</i> 6:59</a>. See vol. 3, pp. <a href="../V3/p221-252Ch11.html#p245">245</a>-6.</td>
        <td></td>
 </tr>
 <tr>
