--- a/Baha'i/Others/ROB/V4/p050-072Ch04.html
+++ b/Baha'i/Others/ROB/V4/p050-072Ch04.html
@@ -73,7 +73,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p52">52</a></center><p>
 	   * The gathering of the holy souls in the next world.<p>
-	   † <i>Qur'án</i> 3:91.<p>
+	   † <a href="../../../../CLUI/UnifiedIndex.html#Qur'án3:91"><i>Qur'án</i> 3:91</a>.<p>
 	   ‡ <i>Qur'án</i> 29:19; 53:48: 56:92.
 	   </small></td>
 </tr>
