--- a/Baha'i/Others/ROB/V4/p205-213Ch14.html
+++ b/Baha'i/Others/ROB/V4/p205-213Ch14.html
@@ -141,7 +141,7 @@ p. 209 - changed "but for whom God" to "But for him, God"
        <td></td>
        <td VALIGN=top><small><center><a name="p211">211</a></center><p>
 	   * A designation for women. (A.T.)<p>
-	   † see Qur'án 20:87-98.<p>
+	   † see <a href="../../../../CLUI/UnifiedIndex.html#Qur'án20:87-98">Qur'án 20:87-98</a>.<p>
 	   <hr>
 	   8. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para528">pp. 183</a>, <a href="../../../Baha/TOB/p001-270TOB.html#para528">184</a>, <a href="../../../Baha/TOB/p001-270TOB.html#para531">185</a> <i>passim</i>.<p>
 	   9. <i>ibid</i>. <a href="../../../Baha/TOB/p001-270TOB.html#para540">p. 189</a>.<p>
