--- a/Baha'i/SE/GPB/Introduction.html
+++ b/Baha'i/SE/GPB/Introduction.html
@@ -144,10 +144,10 @@
 	</td>
 	<td VALIGN=top><small>
 	1 Luke c. 21, v. 24;<p>
-	2 Matt. c. 24, w. 12, 48;<p>
+	2 Matt. c. 24, vv. 12, 48;<p>
 	3 Matt. c. 24, v. 38;<p>
-	4 Matt. c. 24, V. 43;<p>
-	5 Matt. c. 25, V. 33;<p>
+	4 Matt. c. 24, v. 43;<p>
+	5 Matt. c. 25, v. 33;<p>
 	6 Luke c. 21, v. 35;<p>
 	7 Matt. c. 24, v. 27.
 	</small></td>
