--- a/Baha'i/SE/GPB/p087-234SecondPeriod.html
+++ b/Baha'i/SE/GPB/p087-234SecondPeriod.html
@@ -346,7 +346,8 @@ para69 Quote from Iqan "From My eyes", Iqan has "From Our eyes"
 	In His Epistle to Násiri'd-Dín Sháh, His royal adversary, revealed at the height of the proclamation of His Message, occur these passages which shed further light on the Divine origin of His mission: "<i>O King! I was but a man like others, asleep upon My couch, when lo, the breezes of the All-Glorious were wafted over Me, and taught Me the knowledge of all that hath been. This thing is not from Me, but from One Who is Almighty and All-Knowing. And he bade Me lift up My voice between earth and heaven, and for this there befell Me what hath caused the tears of every man of understanding to flow.… This is but a leaf which the winds of the will of Thy Lord, the Almighty, the All-Praised, have stirred.… His all-compelling summons hath reached Me, and caused Me to speak His praise amidst all people. I was indeed as one dead when His behest was uttered. The hand of the will of Thy Lord, the Compassionate, the Merciful, transformed Me.</i>" "<i>By My Life!</i>" He asserts in another Tablet, "<i>Not of Mine own volition have I revealed Myself, but God, of His own choosing, hath manifested Me.</i>" And again: "<i>Whenever I chose to hold My peace and be still, lo, the Voice of the Holy Spirit, standing on My right hand, aroused Me, and the Most Great Spirit appeared before My face, and Gabriel overshadowed Me, and the Spirit of Glory stirred within My bosom, bidding Me arise and break My silence.</i>"
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+    [CLUI: "O king! I was but a man...", <a href="../../../CLUI/UnifiedIndex.html#Lawh-i-Sultán"><i>Lawh-i-Sultán</i></a>]
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
