--- a/CLUG/UnifiedGlossary.html
+++ b/CLUG/UnifiedGlossary.html
@@ -1332,9 +1332,10 @@ Key:<p>
 	<blockquote>
 	{<tt>ESW</tt>: A holy vale in Sinai. (Qur'án 20; 10, 11, Exod. 3; I Kgs. 198.)}
 	</blockquote>
-<b><a href="../CLUI/UnifiedIndex.html#Religioustraditions">Traditions</a></b><a name="Traditions"></a>
+<b><a href="../CLUI/UnifiedIndex.html#Religioustraditions">Traditions</a></b><a name="Traditions"></a>, Hadíth
 	<blockquote>
-	{<tt>KI</tt>: The authoritative record of inspired sayings and acts of the Prophet, in addition to the revelation contained in the Qur'án}
+	{<tt>KI</tt>: The authoritative record of inspired sayings and acts of the Prophet, in addition to the revelation contained in the Qur'án}<p>
+	{<tt>ROB1</tt>: Hadíth or 'the traditions' are the sayings of Muhammad or the Imáms (successors of Muhammad), recorded by those who themselves claimed to have heard them either directly or indirectly. <a href="../Baha'i/Others/ROB/V1/p045-052Ch04.html#p48">p. 48</a> footnote}<br>
 	</blockquote>
 <b>Túmán</b><a name="Túmán"></a>
 	<blockquote>
