--- a/Baha'i/AB/SAQ/p081-140Part2.html
+++ b/Baha'i/AB/SAQ/p081-140Part2.html
@@ -574,7 +574,8 @@
 	<center><h2>MIRACLES</h2></center>
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Manifestation(s)ofGodMiracles">Miracles</a>]
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">100</DIV></center><p></small></td>
 </tr>
